--- a/informe.tex
+++ b/informe.tex
@@ -10,6 +10,8 @@
 \usepackage{hyperref}
 \usepackage{xcolor}
 \usepackage{listings}
+\usepackage{float}
+\usepackage{titlesec}
 
 % --- CONFIGURACIÓN ---
 \geometry{a4paper, margin=2.5cm}
@@ -20,6 +22,14 @@
     citecolor=black
 }
 \graphicspath{{images/}} % Ruta a la carpeta de imágenes
+
+% Espaciado entre párrafos y sin sangría
+\setlength{\parskip}{1em}
+\setlength{\parindent}{0pt}
+
+% Más espacio antes/después de secciones y subsecciones
+\titlespacing*{\section}{0pt}{2em}{1em}
+\titlespacing*{\subsection}{0pt}{1.5em}{0.8em}
 
 % Limita la profundidad del índice a secciones y subsecciones (Nivel 2)
 \setcounter{tocdepth}{2}
@@ -40,12 +50,12 @@
 % --- DATOS DE PORTADA (PLANTILLA) ---
 \title{
     \vspace{2cm}
-    \textbf{Memoria de Actividades: Hacking Ético} \\
-    \large \textit{Resolución de Salas --- TryHackMe}
+    \textbf{Informe de Hacking Ético} \\
+    \large \textit{Subtítulo1 --- Subtítulo2}
     \vspace{3cm}
 }
 \author{Autor: [TU NOMBRE COMPLETO]}
-\date{[FECHA DE ENTREGA]}
+\date{\today}
 
 
 % --- INICIO DEL DOCUMENTO ---
